[package]
name = "trace"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
lto = true

[dependencies]
wasm-bindgen = "0.2.37"
js-sys = "0.3.24"
specs = "0.14.3"
lazy_static = "1.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Window',
  	'Document',
  	'Element',
  	'HtmlElement',
  	'HtmlCanvasElement',
  	'Node',
    'CanvasRenderingContext2d',
  	'Performance'
]